tests/semantic/rel_record/rel_record.dl
.type List = [a:number, b:List]

.decl W(a:List, b:number, c:List)
.printsize W
W(nil,1,nil).

.decl X(a:List)
.output X()
X(nil).

.decl Y(a:List, b:number, c:List)
.input Y()
Y(nil,1,nil).

.decl Z(a:List, b:List)
.output Z()
.input Z()
Z(nil,nil).


